tests/errors/bad_cal.asm
FUNC LABEL 0
    MOV REG 0 VAL 3
    CAL REG 0
    RET
FUNC LABEL 3
    PRINT REG 0
    RET
